--- a/ marp/ARP/WebContent/WEB-INF/ErrorMessages.properties
+++ b/ marp/ARP/WebContent/WEB-INF/ErrorMessages.properties
@@ -2,45 +2,50 @@
 -2 = TRANSACTION_ROLLBACKED
 -3 = ROLLBACK_FAILED
 -4 = FOREIGN_KEY_CONSTRAINT
+-5 = WRONG_PARAMETER
+-6 = OPERATION_COULD_NOT_BEEN_AFFECTED
         
--5 = GROUP_ALREADY_EXISTS
--6 = GROUP_NOT_EXISTS
+-10 = GROUP_ALREADY_EXISTS
+-11 = GROUP_NOT_EXISTS
         
--7 = RESOURCE_NAME_ALREADY_EXTISTS
--8 = RESOURCE_NAME_NOT_EXTISTS
+-12 = RESOURCE_NAME_ALREADY_EXTISTS
+-13 = RESOURCE_NAME_NOT_EXTISTS
         
--9 = RESOURCE_ALREADY_EXTISTS
--10 = RESOURCE_NOT_EXTISTS
+-14 = RESOURCE_ALREADY_EXTISTS
+-15 = RESOURCE_NOT_EXTISTS
         
--11 = RESOURCE_TYPE_ALREADY_EXISTS
--12 = RESOURCE_TYPE_NOT_EXISTS
+-16 = RESOURCE_TYPE_ALREADY_EXISTS
+-17 = RESOURCE_TYPE_NOT_EXISTS
         
--13 = USER_NAME_ALREADY_EXISTS
--14 = USER_NAME_NOT_EXISTS
+-18 = USER_NAME_ALREADY_EXISTS
+-19 = USER_NAME_NOT_EXISTS
         
--15 = USER_ALREADY_EXISTS
--16 = USER_NOT_EXISTS
+-20 = USER_ALREADY_EXISTS
+-21 = USER_NOT_EXISTS
+
 
 
 NO_CONNECTION = -1
 TRANSACTION_ROLLBACKED = -2
 ROLLBACK_FAILED = -3
 FOREIGN_KEY_CONSTRAINT = -4
+WRONG_PARAMETER = -5
+OPERATION_COULD_NOT_BEEN_AFFECTED = -6
         
-GROUP_ALREADY_EXISTS = -5
-GROUP_NOT_EXISTS = -6
+GROUP_ALREADY_EXISTS = -10
+GROUP_NOT_EXISTS = -11
         
-RESOURCE_NAME_ALREADY_EXTISTS = -7
-RESOURCE_NAME_NOT_EXTISTS = -8
+RESOURCE_NAME_ALREADY_EXTISTS = -12
+RESOURCE_NAME_NOT_EXTISTS = -13
          
-RESOURCE_ALREADY_EXTISTS = -9
-RESOURCE_NOT_EXTISTS = -10
+RESOURCE_ALREADY_EXTISTS = -14
+RESOURCE_NOT_EXTISTS = -15
         
-RESOURCE_TYPE_ALREADY_EXISTS = -11
-RESOURCE_TYPE_NOT_EXISTS = -12
+RESOURCE_TYPE_ALREADY_EXISTS = -16
+RESOURCE_TYPE_NOT_EXISTS = -17
         
-USER_NAME_ALREADY_EXISTS = -13
-USER_NAME_NOT_EXISTS = -14
+USER_NAME_ALREADY_EXISTS = -18
+USER_NAME_NOT_EXISTS = -19
         
-USER_ALREADY_EXISTS = -15
-USER_NOT_EXISTS = -16
+USER_ALREADY_EXISTS = -20
+USER_NOT_EXISTS = -21
