--- a/ marp/ARP/WebContent/WEB-INF/classes/ErrorMessages.properties
+++ b/ marp/ARP/WebContent/WEB-INF/classes/ErrorMessages.properties
@@ -9,11 +9,11 @@
 -10 = GROUP_ALREADY_EXISTS
 -11 = GROUP_NOT_EXISTS
         
--12 = RESOURCE_NAME_ALREADY_EXTISTS
--13 = RESOURCE_NAME_NOT_EXTISTS
+-12 = RESOURCE_NAME_ALREADY_EXISTS
+-13 = RESOURCE_NAME_NOT_EXISTS
         
--14 = RESOURCE_ALREADY_EXTISTS
--15 = RESOURCE_NOT_EXTISTS
+-14 = RESOURCE_ALREADY_EXISTS
+-15 = RESOURCE_NOT_EXISTS
         
 -16 = RESOURCE_TYPE_ALREADY_EXISTS
 -17 = RESOURCE_TYPE_NOT_EXISTS
@@ -37,11 +37,11 @@ WRONG_PASSWORD = -7
 GROUP_ALREADY_EXISTS = -10
 GROUP_NOT_EXISTS = -11
         
-RESOURCE_NAME_ALREADY_EXTISTS = -12
-RESOURCE_NAME_NOT_EXTISTS = -13
+RESOURCE_NAME_ALREADY_EXISTS = -12
+RESOURCE_NAME_NOT_EXISTS = -13
          
-RESOURCE_ALREADY_EXTISTS = -14
-RESOURCE_NOT_EXTISTS = -15
+RESOURCE_ALREADY_EXISTS = -14
+RESOURCE_NOT_EXISTS = -15
         
 RESOURCE_TYPE_ALREADY_EXISTS = -16
 RESOURCE_TYPE_NOT_EXISTS = -17
