--- a/ marp/ARP/WebContent/WEB-INF/classes/ErrorMessages.properties
+++ b/ marp/ARP/WebContent/WEB-INF/classes/ErrorMessages.properties
@@ -1,4 +1,5 @@
--1 = NO_CONNECTION
+0 = NO_CONNECTION
+-1 = UNKNOWN_ERROR
 -2 = TRANSACTION_ROLLBACKED
 -3 = ROLLBACK_FAILED
 -4 = FOREIGN_KEY_CONSTRAINT
@@ -24,9 +25,24 @@
 -20 = USER_ALREADY_EXISTS
 -21 = USER_NOT_EXISTS
 
+-22 = STATUS_ALREADY_EXISTS
+-23 = STATUS_NOT_EXISTS
+
+-24 = PROJECT_ALREADY_EXISTS
+-25 = PROJECT_NOT_EXISTS
+
+-26 = PROJECT_NAME_ALREADY_EXISTS
+-27 = PROJECT_NAME_NOT_EXISTS
+
+-28 = LEADER_ALREADY_EXISTS
+-29 = LEADER_NOT_EXISTS
 
 
-NO_CONNECTION = -1
+
+
+
+NO_CONNECTION = 0
+UNKNOWN_ERROR = -1
 TRANSACTION_ROLLBACKED = -2
 ROLLBACK_FAILED = -3
 FOREIGN_KEY_CONSTRAINT = -4
