After DalException throws insteed of returned errcode.

--- a/ marp/ARP/WebContent/WEB-INF/web.xml
+++ b/ marp/ARP/WebContent/WEB-INF/web.xml
@@ -14,6 +14,13 @@
     <url-pattern>/AndroidServlet</url-pattern>
   </servlet-mapping>
   
+  <servlet> 
+    <servlet-name>InitServlet</servlet-name>
+    <servlet-class>edu.ubb.arp.servlet.InitServlet</servlet-class>
+    <load-on-startup>1</load-on-startup> 
+  </servlet>
+  
+  
   <resource-ref>
       <description>DB Connection</description>
       <res-ref-name>jdbc/ARPDB</res-ref-name>
