--- a/ marp/ARP/WebContent/WEB-INF/classes/log4j.properties
+++ b/ marp/ARP/WebContent/WEB-INF/classes/log4j.properties
@@ -2,8 +2,7 @@ log4j.debug=TRUE
 log4j.rootLogger=DEBUG, R
 
 log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=/ARPLogs/arp.log
-log4j.appender.R.MaxFileSize=5MB
-log4j.appender.R.MaxBackupIndex=5
+log4j.appender.R.File=C://ARPLogs//arp.log
+log4j.appender.R=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSSS} -> %p [%c] %m%n
