--- a/ marp/ARP/WebContent/WEB-INF/classes/ErrorMessages.properties
+++ b/ marp/ARP/WebContent/WEB-INF/classes/ErrorMessages.properties
@@ -6,7 +6,8 @@
 -5 = WRONG_PARAMETER
 -6 = OPERATION_COULD_NOT_BEEN_AFFECTED
 -7 = WRONG_PASSWORD
-
+-8 = WRONG_USERNAME_OR_PASSWORD
+-9 = WRONG_REQUEST_FROM_CLIENT
         
 -10 = GROUP_ALREADY_EXISTS
 -11 = GROUP_NOT_EXISTS
