--- a/MARPAndroid/AndroidManifest.xml
+++ b/MARPAndroid/AndroidManifest.xml
@@ -11,7 +11,7 @@
     </uses-permission>
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/luncher"
         android:label="@string/app_name" >
         <activity
             android:name=".ui.Login"
