--- a/MARPAndroid/AndroidManifest.xml
+++ b/MARPAndroid/AndroidManifest.xml
@@ -15,8 +15,8 @@
         android:label="@string/app_name" >
         <activity
             android:name=".ui.Login"
-            android:label="@string/app_name" 
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,38 +25,38 @@
         </activity>
         <activity
             android:name="TestActivity2"
-            android:label="mas label" 
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:label="mas label"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
             android:name=".ui.HelloTabActivity"
-            android:label="TabActivity" 
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:label="TabActivity"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
             android:name=".ui.ProjectActivity"
-            android:label="Projects" 
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:label="Projects"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
             android:name=".ui.ResourcesActivity"
-            android:label="Resources" 
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:label="Resources"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
             android:name=".ui.MyAccountActivity"
-            android:label="My Account" 
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:label="My Account"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
             android:name=".ui.AssignmentsActivity"
-            android:label="Assignments" 
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:label="Assignments"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
             android:name=".ui.NewProjectActivity"
-            android:label="New project" 
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:label="New project"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
 
         <provider
@@ -66,17 +66,19 @@
         <service android:name=".network.MyService" >
         </service>
 
-        <activity android:name=".ui.StripeActivity" 
-            android:theme="@android:style/Theme.NoTitleBar">
+        <activity
+            android:name=".ui.StripeActivity"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
             android:name=".ui.ResourceActivity"
-            android:label="Resource" 
-            android:theme="@android:style/Theme.NoTitleBar">
+            android:label="Resource"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
             android:name=".ui.ModifyResourceReservation"
-            android:label="ModifyResourceReservation" >
+            android:label="ModifyResourceReservation"
+            android:noHistory="true" >
         </activity>
     </application>
 
